feat: add key to turn bindings on/off

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,51 +1,1 @@
-unbind C-b
-set-option -g prefix C-s
-bind-key C-s send-prefix
-
-set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi 'v' send -X begin-selection
-bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
-
-set -g default-terminal "screen-256color"
-set -as terminal-features ",xterm-256color:RGB"
-set -sg escape-time 100
-set -g display-time 2000
-set -g status-interval 5
-setw -g aggressive-resize on
-
-# bring pane from another window into current window
-bind L choose-window 'join-pane -h -s "%%"'  # add as horizontal split (add to the right)
-bind J choose-window 'join-pane -s "%%"'  # add as vertical split (add below)
-# more intuitive window split
-bind \\ split-window -h
-bind - split-window -v
-# -r sets command with repeat-time, defaults to 500ms
-# cycle through windows in number order
-bind -r C-p previous-window
-bind -r C-n next-window
-# <prefix> l is taken by pane navigation
-bind p last-window
-# vim like pane navigation
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
-
-bind-key R source-file ~/.tmux.conf \; display-message "Config Reloaded"
-
-set -g @plugin 'tmux-plugins/tpm'  # <prefix> I to install
-set -g @plugin 'tmux-plugins/tmux-resurrect'  # <prefix> C-s to save, <prefix> C-r to load
-set -g @plugin 'catppuccin/tmux'
-
-set -g @resurrect-strategy-nvim 'session'
-
-set -g @catppuccin_flavour 'latte'
-set -g @catppuccin_window_default_text "#W"
-set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_status_modules_right "directory user host session"
-set -g @catppuccin_directory_text "#{pane_current_path}"
-set -g @catppuccin_window_status_enable "yes"
-set -g @catppuccin_icon_window_current " "
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+/home/michele/personal/dotfiles/.tmux.conf
