feat: add binding for turning bindings on/off

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,6 +13,18 @@ set -g display-time 2000
 set -g status-interval 5
 setw -g aggressive-resize on
 
+# Activate OFF mode
+bind -n M-o \
+    set prefix None \;\
+    set key-table off \;\
+    rename-session "#{session_name}-OFF"
+
+# Disable OFF mode
+bind -T off M-O \
+    set -u prefix \;\
+    set -u key-table \;\
+    rename-session '#{s|-OFF||:session_name}'
+
 # bring pane from another window into current window
 bind L choose-window 'join-pane -h -s "%%"'  # add as horizontal split (add to the right)
 bind J choose-window 'join-pane -s "%%"'  # add as vertical split (add below)
