--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ unbind C-b
 set-option -g prefix C-s
 bind-key C-s send-prefix
 
+set-option -g status-position top
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi 'v' send -X begin-selection
 bind-key -T copy-mode-vi 'y' send -X copy-selection-and-cancel
