--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,5 +60,17 @@ set -g @catppuccin_directory_text "#{pane_current_path}"
 set -g @catppuccin_window_status_enable "yes"
 set -g @catppuccin_icon_window_current " "
 
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " ￨"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator ""
+set -g @catppuccin_status_fill "all"
+set -g @catppuccin_status_connect_separator "no"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
