--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,7 +56,7 @@ set -g @catppuccin_flavour 'latte'
 set -g @catppuccin_window_default_text "#W"
 set -g @catppuccin_window_current_text "#W"
 set -g @catppuccin_status_modules_right "directory user host session"
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
 set -g @catppuccin_window_status_enable "yes"
 set -g @catppuccin_icon_window_current " "
 
